--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
+DATABASE_URL=postgres://db_username:db_pass@db_host:db_port/db_name
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
