--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
 		"production": "mix --production"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.3.7",
 		"bootstrap": "^5.1.1",
 		"laravel-mix": "^6.0.6",
+		"postcss": "^8.3.9",
 		"resolve-url-loader": "^4.0.0",
 		"sass": "^1.42.1",
-		"sass-loader": "^12.1.0"
+		"sass-loader": "^12.1.0",
+		"tailwindcss": "^2.2.17"
 	},
 	"dependencies": {
-		"bootstrap-icons": "^1.5.0"
+		"@supabase/supabase-js": "^1.28.0",
+		"daisyui": "^1.14.4"
 	}
 }
